--- a/pages/pagina2.html
+++ b/pages/pagina2.html
@@ -15,6 +15,9 @@
           <li><a href="pagina4.html">pagina 4</a></li>
           <li><a href="pagina5.html">pagina 5</a></li>
           <li><a href="pagina6.html">pagina 6</a></li>
+          <li><a href="pagina7.html">pagina 7</a></li>
+          <li><a href="pagina8.html">pagina 8</a></li>
+          <li><a href="pagina9.html">pagina 9</a></li>
 
       </ul>
     </nav>
