--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
           <li><a href="pages/pagina4.html">pagina 4</a></li>
           <li><a href="pages/pagina5.html">pagina 5</a></li>
           <li><a href="pages/pagina6.html">pagina 6</a></li>
+          <li><a href="pages/pagina7.html">pagina 7</a></li>
+          <li><a href="pages/pagina8.html">pagina 8</a></li>
+          <li><a href="pages/pagina9.html">pagina 9</a></li>
 
       </ul>
     </nav>
