--- a/pages/pagina7.html
+++ b/pages/pagina7.html
@@ -12,18 +12,19 @@
           <li><a href= "../index.html">inicio</a></li>
           <li><a href="pagina2.html">pagina 2</a></li>
           <li><a href="pagina3.html">pagina 3</a></li>
-          <li><a href="pagina4.html"class="liz">pagina 4</a></li>
+          <li><a href="pagina4.html">pagina 4</a></li>
           <li><a href="pagina5.html">pagina 5</a></li>
           <li><a href="pagina6.html">pagina 6</a></li>
-          <li><a href="pagina7.html">pagina 7</a></li>
+          <li><a href="pagina7.html"class="liz">pagina 7</a></li>
           <li><a href="pagina8.html">pagina 8</a></li>
           <li><a href="pagina9.html">pagina 9</a></li>
 
       </ul>
     </nav>
-<article class="la">
-<article></article>
-<article></article>
+<article class="septimo">
+  <article></article>
+  <article></article>
+
 </article>
 
   </body>
